# EVE-Tools

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst
eve/: api_getter.py  discoverer.py  file_cacher.py  getter.py  lp_bd_generator.py  lp_store.py  runner.py
eve/chatlog/: parser.py
eve/exploration/: runner.py
eve/reformat/: reformat.py  relabler.py
eve_tools/: eve_calculator.py  eve_contract.py  eve_datastore.py  eve_representation.py  lp_bd_generator.py  lp_store.py  runner.py  settings.py
eve_tools/chat/: channel.py  collection.py  filter.py  message.py  metadata.py  parser.py
eve_tools/chatlog/: parser.py
eve_tools/data_layer/: sqlite_connection.py
eve_tools/exploration/: exploration_site.py  reformat.py  relabler.py  runner.py
eve_tools/forum/: converter.py
eve_tools/graph_analysis/: analyzer.py
eve_tools/helper/: api.txt  data_frame.py  esi_cache.py  eve_api.py  eve_datastore.py  file_cache.py  response.py  swagger_api.py  swaggerer.py
eve_tools/old/: api_getter.py  discoverer.py  file_cacher.py  requester.py
swagger_client_docs/: AllianceApi.md  AssetsApi.md  BookmarksApi.md  CalendarApi.md  CharacterApi.md  ClonesApi.md  ContactsApi.md  ContractsApi.md  CorporationApi.md  DogmaApi.md  FactionWarfareApi.md  FittingsApi.md  FleetsApi.md  IncursionsApi.md  IndustryApi.md  InsuranceApi.md  KillmailsApi.md  LocationApi.md  LoyaltyApi.md  MailApi.md  MarketApi.md  OpportunitiesApi.md  PlanetaryInteractionApi.md  RoutesApi.md  SearchApi.md  SkillsApi.md  SovereigntyApi.md  StatusApi.md  UniverseApi.md  UserInterfaceApi.md  WalletApi.md  WarsApi.md
tests/: conftest.py  context.py  settings.py  test_poetry_template.py
(+96 files in other folders)
