[tool.poetry]
name = "eve-tools"
version = "0.0.1"
description = "EVE Online software tools."

license = "MIT"
authors = ["Mislav Jaksic <jaksicmislav@gmail.com>"]
maintainers = []
readme = "README.md"

homepage = "https://github.com/MislavJaksic/EVE-Tools"
repository = "https://github.com/MislavJaksic/EVE-Tools"
documentation = "https://github.com/MislavJaksic/EVE-Tools"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
lockfile = "0.12.2"
numpy = "1.19.3"
pandas = "^1.2.0"
flatten-json = "0.1.7"
pyswagger = "^0.8.39"
rapdevpy = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
black = "^19.10b0"
pytest = "^5.2"
sphinx = "^2.3.1"

[tool.poetry.scripts]
eve-tools = "eve_tools.runner:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
